--- a/testing/input/gels.in
+++ b/testing/input/gels.in
@@ -6,18 +6,16 @@
 # ib: Inner tile size
 # M: Number of rows of matrix A
 # N: Number of columns of matrix B
-# K: Number of columns of matrix A and rows of Matrix B
 # LDA: Leading dimension of matrix A
 # LDB: Leading dimension of matrix B
 # trans: Whether the system involves A (ChamNoTrans) or A^H *ChamTransConj)
-# RH: Size of each subdomain when using RH
 
 op = gels
 nb = 16, 17
 ib = 8
 m = 17, 31, 35
 n = 15, 29, 33
-k = 11, 27, 37
+nrhs = 1, 11, 27, 37
 lda = 43
 ldb = 45
 trans = 0, 2
