--- a/testing/input/gels_hqr.in
+++ b/testing/input/gels_hqr.in
@@ -6,7 +6,6 @@
 # ib: Inner tile size
 # M: Number of rows of matrix A
 # N: Number of columns of matrix B
-# K: Number of columns of matrix A and rows of Matrix B
 # LDA: Leading dimension of matrix A
 # LDB: Leading dimension of matrix B
 # trans: Whether the system involves A (ChamNoTrans) or A^H *ChamTransConj). Currently only ChamNoTrans is supported.
@@ -21,7 +20,7 @@ nb = 8, 9
 ib = 3
 m = 17, 31, 35
 n = 15, 29, 33
-k = 11, 27, 37
+nrhs = 1, 11, 27, 37
 lda = 43
 ldb = 45
 trans = 0
