--- a/testing/input/gesv.in
+++ b/testing/input/gesv.in
@@ -4,7 +4,6 @@
 # GESV
 
 # nb: Tile size
-# ib: Inner tile size
 # n: Order of the matrix A and number of rows of matrix B
 # nrhs: The number of columns of matrix B
 # lda: Leading dimension of matrix A
@@ -12,9 +11,8 @@
 
 op = gesv
 nb = 16, 17
-ib = 8
 n = 15, 21, 35
-nrhs = 13, 22, 33
+nrhs = 1, 13, 22, 33
 lda = 40
 ldb = 41
 seedA = 4687
