--- a/testing/input/ormlq_hqr.in
+++ b/testing/input/ormlq_hqr.in
@@ -8,7 +8,6 @@
 # m: Number of rows of matrix A
 # n: Number of columns of matrix A
 # lda: Leading dimension of matrix A
-# ldb: Leading dimension of matrix B
 # side: Whether Q appears on the left or on the right side of the multiplication
 # trans: Whether the matrix Q is transposed or conjugate transposed
 # qra: Size of TS domain
@@ -18,12 +17,13 @@
 # domino: Enable/Disable the domino between upper and lower trees
 
 op = ormlq_hqr
-nb = 16, 17
+nb = 8, 9
 ib = 3
-n = 15, 20, 32
-m = 13, 21, 34
+m = 15, 20, 33
+n = 13, 21, 34
+k = 9, 15, 21
 lda = 41
-ldb = 42
+ldc = 42
 side = 0:1
 trans = 0,1
 qra = 2
