--- a/testing/input/posv.in
+++ b/testing/input/posv.in
@@ -4,7 +4,6 @@
 # POSV
 
 # nb: Tile size
-# ib: Inner tile size
 # n: Order of the matrix A and number of rows of matrix B
 # nrhs: The number of columns of matrix B
 # lda: Leading dimension of matrix A
@@ -13,9 +12,8 @@
 
 op = posv
 nb = 16, 17
-ib = 8
 n = 15, 21, 35
-nrhs = 13, 22, 33
+nrhs = 1, 13, 22, 33
 lda = 37
 ldb = 39
 uplo = 0,1
