--- a/testing/input/syrk.in
+++ b/testing/input/syrk.in
@@ -3,7 +3,6 @@
 
 # SYRK
 # nb: Tile size
-# ib: Inner tile size
 # N: Order of the matrix C
 # K: Number of columns of the matrix op(A)
 # LDA: Leading dimension of matrix A
@@ -18,11 +17,10 @@ alpha = 0., 3.45
 beta = 0., -4.86
 op = syrk
 nb = 16, 17
-ib = 8
 n = 15, 21, 35
 k = 13, 23, 33
 lda = 38
 ldc = 39
-side = 0:1
 uplo = 0:1
+trans = 0,1
 bump = 0
