--- a/testing/input/sytrs.in
+++ b/testing/input/sytrs.in
@@ -4,7 +4,6 @@
 # POTRS
 
 # nb: Tile size
-# ib: Inner tile size
 # n: Order of the matrix A and number of rows of matrix B
 # nrhs: The number of columns of matrix B
 # lda: Leading dimension of matrix A
@@ -13,9 +12,8 @@
 
 op = sytrs
 nb = 16, 17
-ib = 8
 n = 15, 19, 37
-nrhs = 13, 21, 35
+nrhs = 1, 13, 21, 35
 lda = 41
 ldb = 43
 uplo = 0,1
