--- a/testing/input/unmqr.in
+++ b/testing/input/unmqr.in
@@ -8,18 +8,17 @@
 # m: Number of rows of matrix A
 # n: Number of columns of matrix A
 # lda: Leading dimension of matrix A
-# ldb: Leading dimension of matrix B
 # side: Whether Q appears on the left or on the right side of the multiplication
 # trans: Whether the matrix Q is transposed or conjugate transposed
-# RH: Size of each subdomain when using RH
 
 op = unmqr
 nb = 16, 17
 ib = 8
 m = 15, 20, 33
 n = 13, 21, 34
+k = 9, 15, 21
 lda = 41
-ldb = 42
+ldc = 42
 side = 0:1
 trans = 0,2
 qra = 0, 3
