--- a/testing/input/gesv_nopiv.in
+++ b/testing/input/gesv_nopiv.in
@@ -1,15 +1,18 @@
 # You can enumerate each parameter's values as an explicit list separated by commas or by a range start:end[:step]
 # Not given parameters will receive default values
 
-# GETRF
+# GESV
 
 # nb: Tile size
-# m: Number of rows of the matrix A
-# n: Number of columns of the matrix A
+# n: Order of the matrix A and number of rows of matrix B
+# nrhs: The number of columns of matrix B
 # lda: Leading dimension of matrix A
+# ldb: Leading dimension of matrix B
 
-op = getrf
+op = gesv_nopiv
 nb = 16, 17
-m = 13, 17, 35
-n = 15, 19, 33
-lda = 41
+n = 15, 21, 35
+nrhs = 1, 13, 22, 33
+lda = 40
+ldb = 41
+seedA = 4687
