--- a/testing/input/getrf_nopiv.in
+++ b/testing/input/getrf_nopiv.in
@@ -1,18 +1,15 @@
 # You can enumerate each parameter's values as an explicit list separated by commas or by a range start:end[:step]
 # Not given parameters will receive default values
 
-# GESV
+# GETRF
 
 # nb: Tile size
-# n: Order of the matrix A and number of rows of matrix B
-# nrhs: The number of columns of matrix B
+# m: Number of rows of the matrix A
+# n: Number of columns of the matrix A
 # lda: Leading dimension of matrix A
-# ldb: Leading dimension of matrix B
 
-op = gesv
+op = getrf_nopiv
 nb = 16, 17
-n = 15, 21, 35
-nrhs = 1, 13, 22, 33
-lda = 40
-ldb = 41
-seedA = 4687
+m = 13, 17, 35
+n = 15, 19, 33
+lda = 41
