--- a/testing/input/getrs_nopiv.in
+++ b/testing/input/getrs_nopiv.in
@@ -8,7 +8,7 @@
 # lda: Leading dimension of matrix A
 # ldb: Leading dimension of matrix B
 
-op = getrs
+op = getrs_nopiv
 nb = 16, 17
 nrhs = 1, 13, 17, 35
 n = 15, 19, 33
