add jobu and jobvt in arguments

--- a/testing/input/gesvd.in
+++ b/testing/input/gesvd.in
@@ -6,9 +6,13 @@
 # M: Number of rows of matrix A and C
 # N: Number of columns of matrix B and C
 # LDA: Leading dimension of matrix A
+# JobU: value of jobu
+# JobVt: value of jobvt
 
 op = gesvd
 nb = 3, 4, 16, 17
 m = 15, 32, 37
 n = 13, 24, 35
+jobu = NoVec, AllVec
+jobvt = NoVec, AllVec
 lda = 41
