cmake: add cblas_wrapper.h to the list of headers because must be installed (include/chameleon/chameleon_zlapack.h needs it)

--- a/coreblas/include/CMakeLists.txt
+++ b/coreblas/include/CMakeLists.txt
@@ -48,6 +48,7 @@ precisions_rules_py(
 # --------------------------
 set(COREBLAS_HDRS
     coreblas.h
+    coreblas/cblas_wrapper.h
     coreblas/cblas.h
     coreblas/lapacke.h
     coreblas/lapacke_config.h
