Create a new library for chameleon blas/lapack api symbols to get things separated and clean. This avoids breaking users code using classical chameleon and cblas/lapacke beside (e.g. can cause redefinition of some cblas objects).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -571,6 +571,11 @@ add_subdirectory(control)
 add_subdirectory(compute)
 
 ###############################################################################
+# chameleon_lapack library #
+############################
+add_subdirectory(lapack_api)
+
+###############################################################################
 # Executables and Tests #
 #########################
 enable_testing()
