--- a/cmake_modules/CHAMELEONConfig.cmake.in
+++ b/cmake_modules/CHAMELEONConfig.cmake.in
@@ -86,3 +86,4 @@ if (@CHAMELEON_SCHED_STARPU@)
   include("${CMAKE_CURRENT_LIST_DIR}/chameleon_starpuTargets.cmake")
 endif()
 include("${CMAKE_CURRENT_LIST_DIR}/chameleonTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/chameleon_lapackTargets.cmake")
