Fix description in chameleon_lapack.pc

--- a/lib/pkgconfig/chameleon_lapack.pc.in
+++ b/lib/pkgconfig/chameleon_lapack.pc.in
@@ -14,7 +14,7 @@ libdir=${exec_prefix}/lib
 includedir=${exec_prefix}/include
 
 Name: chameleon_lapack
-Description: Dense Linear Algebra for Scalable Multi-core Architectures and GPGPUs
+Description: Lapack API to the Chameleon library for Scalable multi-core and GPGPUs
 Version: @CHAMELEON_VERSION@
 Cflags: @CHAMELEON_LAPACK_PKGCONFIG_DEFINITIONS@ -I${includedir}
 Libs: -L${libdir} @CHAMELEON_LAPACK_PKGCONFIG_LIBS@
