doc: add org-mode ids below sections in order to get fixed html anchors in urls and avoid non permanent links ending like #orgae0a38e

--- a/doc/user/users_guide.org.in
+++ b/doc/user/users_guide.org.in
@@ -6,15 +6,23 @@
  documentation]].
 
 ** Version
+:PROPERTIES:
+:CUSTOM_ID: doc-version
+:END:
    This manual documents the usage of Chameleon *version {{{VERSION}}}*.
    It was last updated on {{{UPDATED}}}.
 ** Authors
+:PROPERTIES:
+:CUSTOM_ID: doc-authors
+:END:
    * Inria
    * University of Tennessee
    * University of Colorado Denver
    * King Abdullah University of Science and Technology
 ** Copying
-
+:PROPERTIES:
+:CUSTOM_ID: doc-copying
+:END:
    * Copyright \copy {{{UPDATED-YEAR}}} Inria
    * Copyright \copy 2014 The University of Tennessee
    * Copyright \copy 2014 King Abdullah University of Science and Technology
@@ -46,10 +54,19 @@
    of this software, even if advised of the possibility of such damage.
 
 ** Introduction to Chameleon
+:PROPERTIES:
+:CUSTOM_ID: doc-intro
+:END:
  #+INCLUDE: @CMAKE_CURRENT_SOURCE_DIR@/chapters/introduction.org
 ** Installing Chameleon
+:PROPERTIES:
+:CUSTOM_ID: doc-install
+:END:
    <<sec:ug:install>>
  #+INCLUDE: @CMAKE_CURRENT_SOURCE_DIR@/chapters/installing.org
 ** Using Chameleon
+:PROPERTIES:
+:CUSTOM_ID: doc-using
+:END:
    <<sec:ug:using>>
  #+INCLUDE: @CMAKE_CURRENT_SOURCE_DIR@/chapters/using.org
