--- a/cmake_modules/CHAMELEONConfig.cmake.in
+++ b/cmake_modules/CHAMELEONConfig.cmake.in
@@ -9,51 +9,30 @@ set_and_check(CHAMELEON_LIB_DIR "@PACKAGE_LIB_INSTALL_DIR@")
 
 check_required_components(CHAMELEON)
 
-# need MORSE Find modules: necessary files must be distributed in the install path
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/find")
-
 # dependencies of CHAMELEON
-include(CMakeFindDependencyMacro)
-find_dependency(M)
+include("${CMAKE_CURRENT_LIST_DIR}/mTargets.cmake")
 if (NOT @CHAMELEON_SIMULATION@)
-  find_dependency(CBLAS REQUIRED)
-  find_dependency(LAPACKE REQUIRED)
+  include("${CMAKE_CURRENT_LIST_DIR}/cblasTargets.cmake")
+  include("${CMAKE_CURRENT_LIST_DIR}/lapackeTargets.cmake")
 endif()
 if (@CHAMELEON_SCHED_OPENMP@)
-  find_dependency(OpenMP REQUIRED)
+  include("${CMAKE_CURRENT_LIST_DIR}/openmpTargets.cmake")
 endif()
 if (@CHAMELEON_SCHED_PARSEC@)
-  find_dependency(PARSEC REQUIRED)
+  include("${CMAKE_CURRENT_LIST_DIR}/parsecTargets.cmake")
 endif()
 if (@CHAMELEON_SCHED_QUARK@)
-  find_dependency(QUARK REQUIRED COMPONENTS HWLOC)
+  include("${CMAKE_CURRENT_LIST_DIR}/quarkTargets.cmake")
 endif()
 if (@CHAMELEON_SCHED_STARPU@)
-  find_package(STARPU @CHAMELEON_STARPU_VERSION@ REQUIRED)
+  include("${CMAKE_CURRENT_LIST_DIR}/starpuTargets.cmake")
 endif()
 if (@CHAMELEON_USE_MPI@)
-  find_dependency(MPI REQUIRED)
+  include("${CMAKE_CURRENT_LIST_DIR}/mpiTargets.cmake")
 endif()
 if (@CHAMELEON_USE_CUDA@ AND NOT @CHAMELEON_SIMULATION@)
-  find_dependency(CUDA REQUIRED)
-  if ( CUDA_FOUND )
-    if (NOT TARGET CUDA::CUDA)
-      add_library(CUDA::CUDA INTERFACE IMPORTED)
-      if (CUDA_INCLUDE_DIRS)
-        set_target_properties(CUDA::CUDA PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CUDA_INCLUDE_DIRS}")
-      endif()
-      if (CUDA_LIBRARIES)
-        set_target_properties(CUDA::CUDA PROPERTIES INTERFACE_LINK_LIBRARIES "${CUDA_LIBRARIES}")
-      endif()
-      if (NOT TARGET CUDA::CUBLAS)
-        add_library(CUDA::CUBLAS INTERFACE IMPORTED)
-        if (CUDA_CUBLAS_LIBRARIES)
-          set_target_properties(CUDA::CUBLAS PROPERTIES INTERFACE_LINK_LIBRARIES "${CUDA_CUBLAS_LIBRARIES}")
-        endif()
-        target_link_libraries(CUDA::CUBLAS INTERFACE CUDA::CUDA)
-      endif()
-    endif()
-  endif()
+  include("${CMAKE_CURRENT_LIST_DIR}/cudaTargets.cmake")
+  include("${CMAKE_CURRENT_LIST_DIR}/cublasTargets.cmake")
 endif()
 
 # add the targets file
