--- a/doc/user/CMakeLists.txt
+++ b/doc/user/CMakeLists.txt
@@ -84,6 +84,7 @@ if(EMACS_COMPILER)
                                ${CMAKE_CURRENT_SOURCE_DIR}/chapters/introduction.org
                                ${CMAKE_CURRENT_SOURCE_DIR}/chapters/installing.org
                                ${CMAKE_CURRENT_SOURCE_DIR}/chapters/using.org
+                               ${CMAKE_CURRENT_SOURCE_DIR}/chapters/parallel_worker.org
                                ${CMAKE_CURRENT_SOURCE_DIR}/chapters/performances.org
                                ${CMAKE_CURRENT_BINARY_DIR}/CONTRIBUTING.org
                                ${CMAKE_CURRENT_BINARY_DIR}/publish.el
